package IAs;

import ADTs.IVector2;
import ADTs.Vector2;

public interface IDirGiver
{
    IVector2 get();
}
