@startuml
skinparam classAttributeIconSize 0

package IAs{
    interface EntityQuery
    {
        +{abstract}whereToMove(ent:Entity ):IVector2
        +{abstract}whereToSee(ent:Entity ):IVector2
    }

    abstract class ParametricMove extends AIQueryDecorator{
        - t:int
        - lastDirection:IVector2

        +ParametricMove(decorated:EntityQuery)

        + whereToMove(ent:Entity ):IVector2+

        + {abstract} whereToMove(Entity ent, int t):IVector2

        + whereToSee(ent:Entity ):IVector2+

    }

    interface IDirGiver
    {
        +get():IVector2
    }

    AIQueryDecorator -- "1" EntityQuery
    abstract class AIQueryDecorator implements EntityQuery
    {
        + AIQueryDecorator(decorated:EntityQuery )
    }

    class AbsoluteLateral  extends AIQueryDecorator
    {
        -  steps:int
        -  i:int
        -  speed:int
        - es_primer_pasada:boolean
        + int ran;
        + AbsoluteLateral(d:EntityQuery,steps:int)
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
        -ran():int
        +setRandomLevel(x:int)
    }



    class DummyEntityQuery implements EntityQuery{
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    class EllipseMove extends ParametricMove {
        -a:float
        -b:float
        +EllipseMove(decorated:EntityQuery , a:float , b:float )
        +whereToMove(ent:Entity ):IVector2+
    }
    class FalseNTimes implements Predicate{
        -n:int

        + FalseNTimes(n:int )


        +test(entity:Entity ):boolean +
    }

    class Hybrid50Hunter extends AIQueryDecorator {
        +Hybrid50Hunter (handler:EntityQuery )
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    class GetAndRotate implements IDirGiver
    {
        -turn:boolean
        -counter=0:int
        -max :int
        -sp :float
        -last:IVector2
        -rot, frot:float
        GetAndRotate(rot:float , first:IVector2 ,  rotex:boolean)
        +get():IVector2
    }


    class IncreaseSpeedIfWatched extends AIQueryDecorator {
        -pilot:Pilot
        -common_speed:float
        -degrees:float
        +IncreaseSpeedIfWatched (decorated:EntityQuery ,p:Pilot)
        +IncreaseSpeedIfWatched (decorated:EntityQuery ,p:Pilot,d:float)
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    class Kamikazee extends AIQueryDecorator{
        +Kamikazee(decorated:EntityQuery )
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    class LateralAndDown extends AIQueryDecorator{
        - maxDown = 90, maxLateral = 90:int
        - down, lateral:int
        +LateralAndDown (decorated:EntityQuery )
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    class Pilot extends Component{
        -final ship:Ship
        -EntityQuery :handler
        -float :Speed

        +Pilot(handler:EntityQuery , ship:Ship , speed:float )

        +void update()+
        +getHandler():EntityQuery
        +setHandler(handler:EntityQuery )
        +speed():float
        +setSpeed(v:float)
        +clone():Pilot
    }

    PlayerMove -- "2" AbstractDirectionalInput
    class PlayerMove extends AIQueryDecorator{
        +PlayerMove(eq:EntityQuery,move:AbstractDirectionalInput,top:AbstractDirectionalInput  )
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    class RelativeLateral  extends AIQueryDecorator
    {
        -  steps:int
        -  i:int
        -  speed:int
        - es_primer_pasada:boolean
        + int ran;
        + RelativeLateral(d:EntityQuery,steps:int)
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    class Slippery extends AIQueryDecorator{
        -level:float
        -tolerance:float
        -middleDispersion:float
        -last:IVector2
        + Slippery(d:EntityQuery)
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    SoloAI -- "*" EnemyShips
    class SoloAI extends AIQueryDecorator {
        -waypoints: [IVector2]
        -max:int
        -i:int
        -index_waypoints:int
        + SoloAI(d:EntityQuery,waypoints:IVector2)
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+

        + searchSomeEnemies(cant:int )

        - getTarget(ent:Entity ):IVector2

        - getToMove(pos:IVector2 ):IVector2
    }


    class Spinner extends AIQueryDecorator {
        -lastDirection : IVector2
        + Spinner(d:EntityQuery,waypoints:IVector2)
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    SwitchWhen -- "2" EntityQuery
    class SwitchWhen implements EntityQuery  {
        + SwitchWhen(pred:Predicate<Entity>,handlerFirst:EntityQuery,handlerLast:EntityQuery)
        -check(e:Entity)
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }

    WatchAnother -- "1" ITransform
    class WatchAnother extends AIQueryDecorator{
        -scapeFrom:int
        + WatchAnother (another:ITransform,decorated:EntityQuery)
        +whereToMove(ent:Entity ):IVector2+
        +whereToSee(ent:Entity ):IVector2+
    }
}


@enduml